<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="clickListener"
            type="com.example.dashboard.base.ClickListener" />
        <variable
            name="viewModel"
            type="com.example.dashboard.ui.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.fragment.SignupFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_et"
            android:hint="@string/name"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:singleLine="true"
            android:text="@={viewModel.name}"

            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/emailET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_et"
            android:hint="@string/email"
            android:text="@={viewModel.email}"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:singleLine="true"

            app:layout_constraintBottom_toTopOf="@+id/passwordET"
            app:layout_constraintEnd_toEndOf="@id/nameET"
            app:layout_constraintStart_toStartOf="@id/nameET"
            app:layout_constraintTop_toBottomOf="@id/nameET" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_et"
            android:hint="@string/password"
            android:text="@={viewModel.password}"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:singleLine="true"

            app:layout_constraintBottom_toTopOf="@+id/addressET"
            app:layout_constraintEnd_toEndOf="@id/nameET"
            app:layout_constraintStart_toStartOf="@id/nameET"
            app:layout_constraintTop_toBottomOf="@id/emailET" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_et"
            android:hint="@string/address"
            android:maxLines="3"
            android:text="@={viewModel.address}"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"

            app:layout_constraintBottom_toTopOf="@+id/signUpBT"
            app:layout_constraintEnd_toEndOf="@id/nameET"
            app:layout_constraintStart_toStartOf="@id/nameET"
            app:layout_constraintTop_toBottomOf="@id/passwordET" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_et"
            android:backgroundTint="@color/purple_700"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            android:onClick="@{(view) -> clickListener.onClick(view)}"
            app:layout_constraintBottom_toTopOf="@id/loginTV"
            app:layout_constraintEnd_toEndOf="@id/nameET"
            app:layout_constraintStart_toStartOf="@id/nameET" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>



